<resources>
    <string name="app_name">The Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>

    <string name="welcome_title">WELCOME</string>
    <string name="welcome_text">welcome to the app</string>

    <string name="instructions_title">INSTRUCTIONS</string>
    <string name="instructions_text">in the next page you will see the inventory list and a floating button to add items</string>


    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="add_shoes">ADD SHOES</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="cancel">cancel</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="register">Register</string>
    <string name="login_label">Login</string>
    <string name="logout">Logout</string>
    <string name="shoes_list">Shoes List</string>
</resources>